Fix app not showing results Add blink animation while tests running

--- a/src/assets/css/animations.css
+++ b/src/assets/css/animations.css
@@ -18,7 +18,7 @@
 
 /* Blink */
 .blink {
-    animation: blinker 0.8s linear infinite;
+    animation: blinker 1s linear infinite;
 }
 
 @keyframes blinker {
